--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <br>
     <br>
     <br>
-<h1> Welcome to Portuguese 4 You! </h1>
+    <h1> Welcome to Portuguese 4 You! </h1> --->  <h2> Bem-vindos a Português Para Ti ! </h2>
   
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
