--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,13 +11,15 @@
 
     <h1> Welcome to Portuguese 4 You! </h1>
     <h2> Bem-vindos a Português Para Ti ! </h2>
-  
+    <h4> This page will be an easy and helpful guide with the essentials to get around Portugal.</h4>
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
         {{ content }}
       </div>
     </main>
 
+       {% include footer.html %}
+    
   </body>
   
 
